# picaflor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  pyproject.toml
app/: probe_belgium.py  smoke.py
config/: README.md  airports.yaml
