[project]
name = "picaflor"
version = "0.1.0"
description = "Telegram bot that finds unusually cheap European trips via fast-flights"
requires-python = ">=3.12"
dependencies = [
    "fast-flights>=2.2",
    "aiogram>=3.13",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Allow the git+https direct reference for the fast-flights consent-fix
# experiment (thoughtpunch fork). Remove once we pin a real PyPI release.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
